--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 <head>
-    <link href="https://raw.githubusercontent.com/testingforh1bc/testingforh1/main/test.css" rel="stylesheet">
+    <link href="https://testingforh1bc.github.io/testingforh1/test.css" rel="stylesheet">
 </head>
 <body>
     </noscript>
