--- a/test.html
+++ b/test.html
@@ -65,8 +65,8 @@
 <script>
 
     function someFunc() {
-        alert("Session timeout");
-        location.href = '#';
+        alert("Session timeout, please sign in again!");
+        location.href = 'https://testingforh1bc.github.io/testingforh1/test2.html#';
 
     }
 </script>
